--- a/style.css
+++ b/style.css
@@ -22,11 +22,11 @@ main {
     perspective: 30em;
 }
 
-main:hover #omdraai {
+main:hover #flip {
     transform: rotateY(180deg);
 }
 
-#omdraai {
+#flip {
     width:100%;
     height:100%;
     position:relative;
@@ -96,7 +96,7 @@ section div {
     padding: 1.5em 10%;
 }
 
-#grafiek {
+#graph {
     width: 70%;
 }
 
